SONAR-10472 Hover effect on issue box is overflowing when dropdown open

--- a/server/sonar-web/src/main/js/app/styles/components/issues.css
+++ b/server/sonar-web/src/main/js/app/styles/components/issues.css
@@ -26,7 +26,7 @@
   padding-top: 8px;
   padding-bottom: 8px;
   background-color: #ffeaea;
-  box-shadow: 0px 0px 0px 1px #ffeaea;
+  box-shadow: inset 0px 0px 0px 1px #ffeaea;
   transition: all 0.3s ease;
 }
 
@@ -36,7 +36,8 @@
 }
 
 .issue.selected {
-  box-shadow: 0px 0px 0px 1px #dd4040;
+  box-shadow: none;
+  border: 1px solid #dd4040 !important;
 }
 
 .issue + .issue,
